# wero

./: .editorconfig  .gitignore  Cargo.toml  Makefile.toml  dockerfile  readme.md
.github/workflows/: checkPr.yml  deployDev.yml  deployProd.yml  dev.yml  devdeploy.yml  main_wero.yml  prod.yml  proddeploy.yml  restore.yml  restoreBranches.yml
.github/workflows/deploy/: dev.yml  prod.yml
config/: default.toml
db/migrations/: init.txt  migrator.rs  v01__init.json  v02__updateStructure.json
docs/design/: domain.pu
github/workflows/: deploydev.yml  prod.yml
src/: domain.rs  infra.rs  lib.rs  main.rs  modules.rs
src/api/rest/: server.rs
src/domain/: category.rs  contact.rs  departure.rs  details.rs  discipline.rs  format.rs  location.rs  profile.rs  race.rs  ride.rs  route.rs
src/infra/: api.rs  config.rs  core.rs  error.rs  fun.rs
src/infra/api/: handler.rs  problem.rs  response.rs
src/infra/core/: page.rs  paging.rs  result.rs
src/infra/db/: client.rs  traits.rs
src/infra/fun/: map.rs  option.rs  result.rs  task.rs
src/modules/: ride.rs
src/modules/race/: controller.rs  create.rs  find.rs  get.rs
src/modules/ride/: controller.rs  create.rs  find.rs  get.rs
tests/integration/: race.rest  ride.rest
tests/unit/: race.rs
