[package]
name = "wero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.21", features = ["full"] }
axum = "0.6.0"
serde = { version = "1", features = ["derive"] }
mongodb = "2.3.1"
futures = "0.3.25"
bson = "2.4.0"
serde_json = "1.0.89"
tower = "0.4.13"
tracing-subscriber = "0.3"
tracing = "0.1"
config = "0.13.3"