[package]
name = "wero"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.28", features = ["full"] }
axum = "0.6"
serde = { version = "1", features = ["derive"] }
mongodb = { version = "2.5.0", features = ["tracing-unstable"] }
futures = "0.3"
bson = "2.6"
serde_json = "1.0"
tower = "0.4.13"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing = "0.1"
config = "0.13.3"
tower-http = { version = "0.4", features = ["full"] }
